RI-115 layout refresh & layout bug fixes  (university component)

--- a/src/components/gapTest.css
+++ b/src/components/gapTest.css
@@ -5,7 +5,6 @@
   font-weight: normal;
   letter-spacing: 0.1rem;
   text-align: center;
-  padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
